--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -14,7 +14,7 @@
         android:title="Notifications"
         android:icon="@drawable/baseline_notifications_24"/>
     <item
-        android:id="@+id/profile_fragment"
+        android:id="@+id/myactivity_fragment"
         android:title="Profile"
         android:icon="@drawable/baseline_account_circle_24"/>
 </menu>
