Add project management crud and navigate home page to view project activity and connect to firebase

--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -77,167 +77,166 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:id="@+id/imageFilterView"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="243dp"
-                android:background="@drawable/round_shape"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_family_restroom_24" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="10dp"
+            android:text="Donation"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/donation" />
 
-            <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:id="@+id/imageFilterView3"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="59dp"
-                android:layout_marginTop="243dp"
-                android:background="@drawable/round_shape"
-                app:layout_constraintStart_toEndOf="@+id/imageFilterView"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_fastfood_24" />
+        <Button
+            android:id="@+id/donation"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="242dp"
+            android:text="."
+            android:background="@drawable/baseline_family_restroom_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:id="@+id/imageFilterView4"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="243dp"
-                android:layout_marginEnd="29dp"
-                android:background="@drawable/round_shape"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_project" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="10dp"
+            android:text=" Beneficiarie"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/beneficiarie" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="12dp"
-                android:text="Donation"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageFilterView" />
+        <Button
+            android:id="@+id/beneficiarie"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="59dp"
+            android:layout_marginTop="242dp"
+            android:text="."
+            android:background="@drawable/baseline_fastfood_24"
+            app:layout_constraintStart_toEndOf="@+id/donation"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="12dp"
-                android:text=" Beneficiarie"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toBottomOf="@+id/imageFilterView3" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="44dp"
-                android:text="Project"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageFilterView4" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="44dp"
+            android:text="Project"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/project" />
 
 
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="220dp"
-                android:layout_height="64dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="135dp"
-                android:text="Feed Family who need most"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="italic"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <Button
+            android:id="@+id/project"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="242dp"
+            android:layout_marginEnd="30dp"
+            android:text="."
+            android:background="@drawable/baseline_project"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="252dp"
-                android:background="@drawable/rectangle_shape"
-                android:text="Donate Now"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="220dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="135dp"
+            android:text="Feed Family who need most"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="252dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/rectangle_shape"
-                android:text="Learn More"
-                app:layout_constraintBottom_toBottomOf="@+id/textView14"
-                app:layout_constraintEnd_toEndOf="parent" />
+        <Button
+            android:id="@+id/donate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="288dp"
+            android:background="@drawable/rectangle_shape"
+            android:text="Donate Now"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="143dp"
-                android:layout_height="121dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginEnd="7dp"
-                android:background="@drawable/donation"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/textView11"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        <Button
+            android:id="@+id/learnMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="288dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/rectangle_shape"
+            android:text="Learn More"
+            app:layout_constraintBottom_toBottomOf="@+id/textView14"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="378dp"
-                android:layout_height="144dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="9dp"
-                android:layout_marginBottom="64dp"
-                android:background="@drawable/rectangle_shape"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="143dp"
+            android:layout_height="121dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="7dp"
+            android:background="@drawable/donation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView11"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="231dp"
-                android:layout_height="58dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="8dp"
-                android:text="How is my donation used?"
-                android:textColor="@color/darkblue"
-                android:textSize="25dp"
-                app:layout_constraintStart_toStartOf="@+id/textView14"
-                app:layout_constraintTop_toTopOf="@+id/textView14" />
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="378dp"
+            android:layout_height="144dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="64dp"
+            android:background="@drawable/rectangle_shape"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="135dp"
-                android:layout_height="133dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/usage"
-                app:layout_constraintEnd_toEndOf="@+id/textView14"
-                app:layout_constraintTop_toTopOf="@+id/textView14" />
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="231dp"
+            android:layout_height="58dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="How is my donation used?"
+            android:textColor="@color/darkblue"
+            android:textSize="25dp"
+            app:layout_constraintStart_toStartOf="@+id/textView14"
+            app:layout_constraintTop_toTopOf="@+id/textView14" />
 
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="135dp"
+            android:layout_height="133dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/usage"
+            app:layout_constraintEnd_toEndOf="@+id/textView14"
+            app:layout_constraintTop_toTopOf="@+id/textView14" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
