--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">##056AA4</color>
+    <color name="blue">#056AA4</color>
     <color name="darkblue">#00004D</color>
     <color name="gray">#CCCDC6</color>
     <color name="lightgray">#E8E9EB</color>
+    <color name="darkred">#660000</color>
+
 
 </resources>
