Add dimensions and strings

--- a/app/src/main/res/layout/activity_viewproject.xml
+++ b/app/src/main/res/layout/activity_viewproject.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="105dp"
         android:text="View Projects"
         android:textColor="@color/black"
-        android:textSize="38dp"
+        android:textSize="@dimen/topic_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +105,9 @@
         android:layout_height="55dp"
         android:layout_marginEnd="220dp"
         android:background="@color/darkblue"
-        android:text="Update"
+        android:text="@string/update_button"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,9 +120,9 @@
         android:layout_height="55dp"
         android:layout_marginEnd="20dp"
         android:background="@color/darkred"
-        android:text="Delete"
+        android:text="@string/delete_button"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="@dimen/button"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
