--- a/app/src/main/res/layout/activity_addproject.xml
+++ b/app/src/main/res/layout/activity_addproject.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="105dp"
         android:text="Add Project"
         android:textColor="@color/black"
-        android:textSize="38dp"
+        android:textSize="@dimen/topic_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +33,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Title"
-        android:textSize="18dp"
+        android:text="@string/title"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +50,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Description"
-        android:textSize="18dp"
+        android:text="@string/description"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +67,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Project Goal"
-        android:textSize="18dp"
+        android:text="@string/projectgoal"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,8 +85,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Duration"
-        android:textSize="18dp"
+        android:text="@string/duration"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,8 +102,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Status"
-        android:textSize="18dp"
+        android:text="@string/status"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,8 +119,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Organizer"
-        android:textSize="18dp"
+        android:text="@string/organizer"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,8 +136,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Project Category"
-        android:textSize="18dp"
+        android:text="@string/projectcategory"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,8 +153,8 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Add Beneficiaries"
-        android:textSize="18dp"
+        android:text="@string/addbeneficiaries"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,8 +168,8 @@
         android:layout_marginTop="21dp"
         android:layout_marginEnd="27dp"
         android:background="@drawable/rectangle_shape"
-        android:text="Save"
-        android:textSize="23dp"
+        android:text="@string/save_button"
+        android:textSize="@dimen/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addbeneficiaries" />
