--- a/app/src/main/res/layout/activity_updateproject.xml
+++ b/app/src/main/res/layout/activity_updateproject.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="105dp"
         android:text="Update Project"
         android:textColor="@color/black"
-        android:textSize="38dp"
+        android:textSize="@dimen/topic_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Title"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Description"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Project Goal"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Duration"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Status"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Organizer"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Project Category"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +153,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Add Beneficiaries"
-        android:textSize="18dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,7 +168,7 @@
         android:layout_marginEnd="27dp"
         android:background="@drawable/rectangle_shape"
         android:text="Update"
-        android:textSize="23dp"
+        android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_addbeneficiaries" />
