--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray">#CCCDC6</color>
     <color name="lightgray">#E8E9EB</color>
     <color name="darkred">#660000</color>
+    <color name="darkgreen">#002800</color>
 
 
 </resources>
