--- a/app/src/main/res/layout/activity_update_donation.xml
+++ b/app/src/main/res/layout/activity_update_donation.xml
@@ -4,167 +4,153 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Updateproject"
-    android:background="@drawable/back_add">
+    tools:context=".UpdateDonation"
+    android:background="@drawable/back_donation"
+    tools:ignore="ExtraText">
 
     <TextView
-        android:id="@+id/updateproject"
+        android:id="@+id/updateDonation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="105dp"
-        android:text="Update Project"
+        android:text="Update Donation"
         android:textColor="@color/black"
         android:textSize="@dimen/topic_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.335"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/up_title"
+        android:id="@+id/up_name"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Title: "
+        android:text="Donor Name: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateproject" />
+        app:layout_constraintTop_toBottomOf="@+id/updateDonation" />
 
     <EditText
-        android:id="@+id/up_description"
+        android:id="@+id/up_nic"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Description: "
+        android:text="Donor NIC: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_title" />
+        app:layout_constraintTop_toBottomOf="@+id/up_name" />
 
     <EditText
-        android:id="@+id/up_projectgoal"
+        android:id="@+id/up_mobile"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Project Goal: "
+        android:text="Donor Mobile no: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_description" />
+        app:layout_constraintTop_toBottomOf="@+id/up_nic" />
 
 
     <EditText
-        android:id="@+id/up_duration"
+        android:id="@+id/up_address"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Duration: "
+        android:text="Donor Address: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_projectgoal" />
+        app:layout_constraintTop_toBottomOf="@+id/up_mobile" />
 
     <EditText
-        android:id="@+id/up_status"
+        android:id="@+id/up_item"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Status: "
+        android:text="Donation Item(s): "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_duration" />
+        app:layout_constraintTop_toBottomOf="@+id/up_address" />
 
     <EditText
-        android:id="@+id/up_organizer"
+        android:id="@+id/up_quantity"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="  Organizer: "
+        android:text="Quantity: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_status" />
+        app:layout_constraintTop_toBottomOf="@+id/up_item" />
 
     <EditText
-        android:id="@+id/up_category"
+        android:id="@+id/up_date"
         android:layout_width="348dp"
         android:layout_height="55dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@drawable/donation_rectangle"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="  Project Category: "
+        android:inputType="date"
+        android:text="Item submission date: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_organizer" />
+        app:layout_constraintTop_toBottomOf="@+id/up_quantity" />
 
-    <EditText
-        android:id="@+id/up_addbeneficiaries"
-        android:layout_width="348dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="  Add Beneficiaries: "
-        android:textSize="@dimen/form_field_test"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_category" />
 
     <Button
-        android:id="@+id/up_pro_savebutton"
+        android:id="@+id/up_savebutton"
         android:layout_width="130dp"
         android:layout_height="55dp"
         android:layout_marginStart="254dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="27dp"
         android:background="@color/darkblue"
         android:textColor="@color/white"
@@ -172,6 +158,7 @@
         android:textSize="@dimen/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_addbeneficiaries" />
+        app:layout_constraintTop_toBottomOf="@+id/up_date" />
+    >
 
 </androidx.constraintlayout.widget.ConstraintLayout>
