--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="form_field_test">18dp</dimen>
     <dimen name="button">23dp</dimen>
     <dimen name="topic_text">38dp</dimen>
+    <dimen name="topic_sub">30dp</dimen>
+    <dimen name="sub_sub">22dp</dimen>
 </resources>
